# ferencfarkas.org

./: .eslintrc.js  .gitignore  .gitmodules  README.md  book.json  config.toml  ecosystem.config.js  netlify.toml  package-lock.json  package.json
.forestry/: settings.yml
catalogue/: TODO.md
catalogue/data/: .gitignore  categories.yaml  fields.yaml  genres.yaml  model.yaml  owners.yaml  publishers.yaml
catalogue/data_raw/: categories.yaml
catalogue/i18n/: de.json  en.json  fr.json  hu.json
catalogue/pdf-generator/: config.json  index.js  package-lock.json  package.json
catalogue/schemas/: audio.json  score.json  score_type.json  work.json
catalogue/word-to-yaml/: .translations.yaml  README.md  config.yaml  go.mod  go.sum  main.go
content/: _index.md  test.md
content/life/: biography.md  pictures.md
content/media/: _index.md
content/work/: 2.md
data/biographies/: official-en.md
data/catalog/: categories.yaml
design/: ferencfarkas.org.fig
docs/: INSTALL.md  README.md  SUMMARY.md  TOOLS.md  TOUTES LES CATEGORIES DU CATALOGUE - Copie.docx
docs/api/: shortcodes.md
docs/content/: README.md  catalog.md  create.md  edit.md  organization.md  (+2 more)
publisher/: package-lock.json  package.json
publisher/src-tauri/: Cargo.toml  tauri.conf.json
publisher/src-tauri/src/: main.rs
scripts/: common.js  prebuild-web.js  prebuild.js  release.js  scores.js  serve.bat  work-to-audio.js  workdate.js
webapp/: .drosserc.js  .uuid  package.json  rollup.config.js  routes.json
website/: .gitignore  config.toml  package-lock.json  package.json  postcss.config.js
(+2391 files in other folders)
